--- a/prj/vs2010/CrHack/CrHack.vcxproj.filters
+++ b/prj/vs2010/CrHack/CrHack.vcxproj.filters
@@ -341,9 +341,6 @@
     <ClCompile Include="..\..\..\src\_math_\pt100_t2r.c">
       <Filter>源文件\_math_</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\_math_\radar_fmcw.c">
-      <Filter>源文件\_math_</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\src\_math_\rect_ops.c">
       <Filter>源文件\_math_</Filter>
     </ClCompile>
@@ -483,6 +480,9 @@
       <Filter>源文件\_util_</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\_util_\httplib.c">
+      <Filter>源文件\_util_</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\_util_\radar_fmcw.c">
       <Filter>源文件\_util_</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\_util_\rfgeo.c">
